fix legend spacing

--- a/frontend/react/src/components/Permits.css
+++ b/frontend/react/src/components/Permits.css
@@ -1,7 +1,6 @@
 /*legent stuff */
 
 .legend {
-	margin-top: .5rem;
 	border-radius: 2px;
 	border-style: solid;
 	border-radius: 10px;
